eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: { { ECR_REPO_URL_WITH_TAG } }
          ports:
            - containerPort: 8080
